# trainining_model_ensearte_LSC

./: .gitignore  crop_dataset.ipynb  main.py  pyproject.toml
timeSformer/: config.py  main.ipynb
timeSformer/data/: datasets.py  preprocesing.py
timeSformer/model/: load.py
videomae/: config.py  main.ipynb
videomae/model/: load.py
videomae/training/: metrics.py
vivit/: config.py
vivit/data/: load.py
vivit/model/: load.py
