[project]
name = "training_models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "torchaudio>=2.6.0",
  "datasets>=3.6.0",
  "transformers[torch]>=4.52.3",
  "pytorchvideo>=0.1.5",
  "av>=14.4.0",
  "evaluate>=0.4.3",
  "scikit-learn>=1.6.1",
  "optuna>=4.3.0",
  "optuna-dashboard>=0.18.0",
  "matplotlib>=3.10.3",
  "opencv-python>=4.11.0.86",
]


[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
]
